# studip-downloader

./: Cargo.toml  README.md  settings.json
.github/workflows/: build.yml
src/: courses.rs  doc_sync.rs  main.rs  semesters.rs  settings.rs
