[package]
name = "studip-downloader"
version = "0.1.0"
edition = "2021"

[[bin]]
edition = "2021"
name = "studip-downloader"
path = "src/main.rs"
authors = ["Khirath-bit"]
license = "MIT"
description = "A tool to sync documents and files from studip to a local folder structure"
readme = "README.md"
homepage = "https://github.com/Khirath-bit/studip-downloader"
repository = "https://github.com/Khirath-bit/studip-downloader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21.5"
reqwest = { version = "0.11.22", features = ["json"]}
async-recursion = "1.0.5"
bytes = "1.5.0"
filetime_creation = "0.1.6"
